# VoxidianProtocol

./: .gitignore  Cargo.toml  build.rs
src/: buffer.rs  codec.rs  lib.rs
src/autogenerated/: attribute_types.rs  biomes.rs  block_entity_types.rs  block_states.rs  damage_types.rs  entities.rs  items.rs  mod.rs  particle_types.rs  sounds.rs
src/autogenerated/implementations/: biomes.rs  block_states.rs  damage_types.rs  mod.rs
src/codec/: decode.rs  encode.rs  mod.rs
src/mojang/: auth_verify.rs
src/net/: connection.rs  server.rs
src/packet/: buffer.rs  encrypt.rs  meta.rs  mod.rs  reader.rs  writer.rs
src/packet/c2s/: mod.rs
src/packet/c2s/config/: mod.rs
src/packet/c2s/handshake/: handshake.rs  mod.rs
src/packet/c2s/login/: mod.rs
src/packet/c2s/play/: mod.rs
src/packet/c2s/status/: mod.rs
src/packet/codec/: decode.rs  encode.rs  mod.rs  ordinal.rs
src/packet/process/: compress.rs  encrypt.rs  mod.rs
src/packet/processing/: compress.rs  encrypt.rs  mod.rs
src/packet/s2c/: mod.rs
src/packet/s2c/config/: mod.rs
src/packet/s2c/login/: mod.rs
src/packet/s2c/play/: commands.rs  container.rs  mod.rs
src/packet/s2c/play/commands/: clap.rs  mod.rs
src/packet/s2c/status/: mod.rs
src/registry/: dimension_types.rs  entry.rs  mod.rs  value.rs
src/registry/entry/: chat_type.rs  damage_type.rs  dim_type.rs  dimension_type.rs  entity_type.rs  item.rs  mod.rs  particle_type.rs  screen.rs  sound_event.rs
src/registry/reg/: frozen.rs  mod.rs
src/value/: angle.rs  attribute_type.rs  banner_pattern.rs  biome.rs  block.rs  block_pos.rs  block_state.rs  chat_type.rs  chunk_section.rs  chunk_section_position.rs  colour.rs  consume_all_seq.rs  consume_all_vec.rs  damage_type.rs  dim_type.rs  either.rs  entity_metadata.rs  entity_type.rs  id_set.rs  ident.rs  item.rs  length_prefix_double_vec.rs  length_prefix_hashmap.rs  length_prefix_seq.rs  length_prefix_vec.rs  mod.rs  nbt.rs  option_varint.rs  painting_variant.rs  particle.rs  particle_data.rs  raw_data_array.rs  recipe.rs  reg_or.rs  sound.rs  sound_event.rs  status_effect.rs  text.rs  var32.rs  var64.rs  (+4 more)
src/value/nbt/: compound.rs  element.rs  into_element.rs  mod.rs
src/value/slot/: components.rs  mod.rs
src/value/text/: click_event.rs  colour.rs  component.rs  content.rs  hover_event.rs  json.rs  mod.rs  nbt.rs  style.rs  xml.rs
src/value/variants/: cat_variant.rs  chicken_variant.rs  cow_variant.rs  frog_variant.rs  mod.rs  pig_variant.rs  wolf_sound_variant.rs  wolf_variant.rs
voxidian-datagen/: Cargo.toml  README.md
voxidian-protocol-datagen/: .gitignore  Cargo.toml  build.gradle  gradle.properties
voxidian-protocol-datagen/src/: attributes.rs  block_entity_types.rs  block_states.rs  entity_types.rs  items.rs  main.rs  packets.rs  particle_types.rs  reports.rs  sounds.rs
voxidian-protocol-datagen/src/main/java/net/totobirdcreations/voxidianprotocoldatagen/: PacketGroup.java
voxidian-protocol-datagen/src/main/java/net/totobirdcreations/voxidianprotocoldatagen/dumps/: PacketDump.java  RegistryDump.java
voxidian-protocol-datagen/src/main/java/net/totobirdcreations/voxidianprotocoldatagen/mixin/: EulaReaderMixin.java  MinecraftServerMixin.java
voxidian-protocol-datagen/src/main/resources/: fabric.mod.json  voxidian-protocol-datagen.mixins.json
voxidian-protocol-macros/: Cargo.toml
voxidian-protocol-macros/src/: component.rs  lib.rs  packet.rs  packet_enum.rs  packet_full_decode.rs  packet_part.rs  reg_from_file.rs
