[package]
name        = "voxidian-protocol"
version     = "0.1.0"
authors     = ["LighthouseMC <https://github.com/LighthouseMC>"]
description = "Minecraft network protocol datastructures and implementations in Rust."

homepage   = "https://github.com/LighthouseMC"
repository = "https://github.com/LighthouseMC/VoxidianProtocol"

edition = "2024"

[workspace]
members = ["voxidian-datagen", "voxidian-protocol-macros" ]

[lints.rust]
unused-parens = "allow"


[dependencies.voxidian-protocol-macros]
path = "voxidian-protocol-macros"

[dependencies.serde]
version  = "1.0"
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0"

[dependencies.uuid]
version  = "1.11"
features = [ "v4", "serde" ]

[dependencies.cesu8]
version = "1.1"

[dependencies.openssl]
version = "0.10"
