[package]
name        = "voxidian-protocol"
version     = "0.1.0"
authors     = ["LighthouseMC <https://github.com/LighthouseMC>"]
description = "Minecraft network protocol datastructures and implementations in Rust."
license     = "LGPL-3.0"

homepage   = "https://github.com/LighthouseMC"
repository = "https://github.com/LighthouseMC/VoxidianProtocol"

edition = "2024"

[workspace]
members = [
    "voxidian-protocol-datagen",
    "voxidian-protocol-macros"
]

[lints.rust]
unused-parens = "allow"


[dependencies.voxidian-protocol-macros]
path = "voxidian-protocol-macros"

[dependencies.serde]
version  = "1.0"
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0"

[dependencies.uuid]
version  = "1.11"
features = [ "v4", "v3", "serde" ]

[dependencies.cesu8]
# Used for converting NBT strings into a format which can be packet en/decoded.
version = "1.1"

[dependencies.openssl]
# Used for RSA public-key and AES128CFB8 secret-key encryption.
version = "0.10"

[dependencies.flate2]
# Used for ZLib (de)compression of packets.
version = "1.0"

[dependencies.reqwest]
# Used for making requests to the Mojang authentication servers.
version  = "0.12"
features = [ "blocking" ]

[dependencies.num-bigint]
# Used for generating Java-style signed hexdigests to send to the Mojang authentication servers.
version = "0.4"
