[package]
name        = "voxidian-protocol-datagen"
version     = "0.1.0"
authors     = ["LighthouseMC <https://github.com/LighthouseMC>"]
description = "Minecraft network protocol datastructures and implementations in Rust."
license     = "LGPL-3.0"
publish     = false

homepage   = "https://github.com/LighthouseMC"
repository = "https://github.com/LighthouseMC/VoxidianProtocol"

edition = "2024"

workspace = "../"

[lints.rust]
unused-parens = "allow"
