[package]
name        = "voxidian-protocol-macros"
version     = "0.1.0"
authors     = ["LighthouseMC <https://github.com/LighthouseMC>"]
description = "Minecraft network protocol datastructures and implementations in Rust."

homepage   = "https://github.com/LighthouseMC"
repository = "https://github.com/LighthouseMC/VoxidianProtocol"

edition = "2024"

workspace = "../"

[lints.rust]
unused-parens = "allow"

[lib]
proc-macro = true


[dependencies.syn]
version  = "2.0"
features = [ "full" ]

[dependencies.quote]
version = "1.0"

[dependencies.proc-macro2]
version = "1.0"

[dependencies.lazy_static]
version = "1.5"
