[package]
name        = "voxidian-protocol-macros"
version     = "0.1.0"
authors     = ["LighthouseMC <https://github.com/LighthouseMC>"]
description = "Minecraft network protocol datastructures and implementations in Rust."
license     = "LGPL-3.0"

homepage   = "https://github.com/LighthouseMC"
repository = "https://github.com/LighthouseMC/VoxidianProtocol"

edition = "2024"

workspace = "../"

[lints.rust]
unused-parens = "allow"

[lib]
proc-macro = true

[dependencies.indexmap]
version = "2.7.0"
features = ["std"]

[dependencies.syn]
version  = "2.0"
features = [ "full" ]

[dependencies.quote]
version = "1.0"

[dependencies.proc-macro2]
version = "1.0"

[dependencies.serde]
version  = "1.0"
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0"

[dependencies.str_inflector]
version = "0.12"
